syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/escalopa/fingo/pb";

package pb;

message Session {
  message UserDevice {
    string client_ip = 1;
    string user_agent = 2;
  }
  string id = 1;
  UserDevice user_device = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp expires_at = 4;
}

// Signup
message SignupRequest {
  string first_name = 1;
  string last_name = 2;
  string username = 3;
  string email = 4;
  string password = 5;
}
message SignupResponse {
  string message = 1;
}

// Signin
message SigninRequest {
  string email = 1;
  string password = 2;
}
message SigninResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

// Logout
message LogoutRequest {
  string session_id = 1;
}
message LogoutResponse {
  string message = 1;
}

// RenewAccessToken
message RenewAccessTokenRequest {
  string user_id = 1;
  string refresh_token = 2;
}
message RenewAccessTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// GetUserDevices
message GetUserDevicesRequest {}
message GetUserDevicesResponse {
  repeated Session devices_sessions = 1;
}

service AuthService {
  // Auth
  rpc Signin(SigninRequest) returns (SigninResponse);
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  // Token
  rpc RenewAccessToken(RenewAccessTokenRequest) returns (RenewAccessTokenResponse);
  // Sessions
  rpc GetUserDevices(GetUserDevicesRequest) returns (GetUserDevicesResponse);
}
